<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="20dp">

    <Button
        android:id="@+id/button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp"
        android:text="@string/click_me"
        android:textSize="30sp"
        app:backgroundTint="@color/DarkCyan" />

    <me.grantland.widget.AutofitTextView
        android:id="@+id/textBox"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="3"
        android:background="@color/Beige"
        android:gravity="center"
        android:text="@string/your_text"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        autofit:minTextSize="24sp"
        />

    <TextView
        android:id="@+id/orderText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="2"
        android:background="@color/Azure"
        android:gravity="center"
        android:text="@string/not_selected"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:visibility="visible" />

</LinearLayout>
