<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/new_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patrolling_on"
        android:id="@+id/patroling_text"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="28sp"
        />
    <TextView
        android:id="@+id/selected_options_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_below="@id/patroling_text"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_marginStart="20dp"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/open_webpage_button"
        android:layout_width="900dp"
        android:layout_height="300dp"
        android:text="@string/toque_aqui"
        app:backgroundTint="@color/DarkCyan"
        android:textSize="82sp"

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"/>


    <Button
        android:id="@+id/backSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/DarkCyan"
        android:text="@string/voltar"
        android:textSize="40sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"/>

    <include
        layout="@layout/logo_layout"/>


</RelativeLayout>
