<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/start_button"
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/DarkCyan"
        android:text="@string/patrulhar"
        android:textSize="56sp" />

    <Button
        android:id="@+id/show_options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/start_button"
        android:backgroundTint="@color/DarkCyan"
        android:text="@string/selecionar_localiza_es_de_patrulha"
        android:textSize="34sp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/DarkCyan"
        android:text="Definições"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="36sp" />

    <Button
        android:id="@+id/close_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:backgroundTint="@color/DarkCyan"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/fechar" />

    <RelativeLayout
        android:id="@+id/options_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:visibility="gone"
        android:layout_marginTop="40dp"
        android:layout_centerInParent="true">

        <ListView
            android:id="@+id/options_list"
            android:textSize="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/back_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:textSize="30sp"
            android:backgroundTint="@color/DarkCyan"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="16dp"
            android:text="@string/menu_principal" />

        <Button
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:textSize="26sp"
            android:backgroundTint="@color/DarkCyan"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="300dp"
            android:text="@string/patrulhar"

            />

    </RelativeLayout>

    <include
        layout="@layout/logo_layout"/>

</RelativeLayout>
